# excel-craft

./: CHART_BLOCKS_DESIGN.md  P1_IMPLEMENTATION_SUMMARY.md  P2_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_zh-CN.md  TABLE_BLOCKS_DESIGN.md  package.json  package.oo.yaml  pyproject.toml
flows/flow-1/: flow.oo.yaml
flows/test-formula-block/: flow.oo.yaml
flows/test-p2-blocks/: flow.oo.yaml
oo-locales/: en.json  zh-CN.json
sample-data/: employees.csv  sales_with_dates.csv  test_format.xlsx
tasks/table-aggregator/: __init__.py  task.oo.yaml
tasks/table-analyzer/: __init__.py  task.oo.yaml
tasks/table-cleaner/: __init__.py  task.oo.yaml
tasks/table-filter/: __init__.py  task.oo.yaml
tasks/table-format/: __init__.py  task.oo.yaml
tasks/table-formula/: __init__.py  task.oo.yaml
tasks/table-inspector/: __init__.py  task.oo.yaml
tasks/table-joiner/: __init__.py  task.oo.yaml
tasks/table-reader/: __init__.py  task.oo.yaml
tasks/table-sampler/: __init__.py  task.oo.yaml
tasks/table-splitter/: __init__.py  task.oo.yaml
tasks/table-time-series/: __init__.py  task.oo.yaml
tasks/table-transformer/: __init__.py  task.oo.yaml
tasks/table-validator/: __init__.py  task.oo.yaml
tasks/table-writer/: __init__.py  task.oo.yaml
